@@ -159,12 +159,11 @@ sub create_main_window {
 			    $forms->{'window_comic_page'}{'viewport1'} = $widgets->{'viewport1'};
 				#
 				# Construct a GtkList 'list1'
-	            my @titles = ("Title", "abbr.", "dbh");
+	            my @titles = ("Title", "dbh");
 				$widgets->{'list1'} = new_with_titles Gtk::CList( @titles );
 				$widgets->{'list1'}->set_selection_mode('single' );
               	$widgets->{'list1'}->set_column_width( 0, 300 );
-                $widgets->{'list1'}->set_column_width( 1, 100 );
-	            $widgets->{'list1'}->set_column_width( 2, 25 );
+                $widgets->{'list1'}->set_column_width( 1, 25 );
                 $widgets->{'list1'}->set_shadow_type( 'out' );
 
 				$forms->{'window_comic_page'}{'viewport1'}->add($widgets->{'list1'} );
