@@ -1,5 +1,5 @@
 #!/usr/bin/perl -w
-#-*-mode: Perl; tab-width: 4 -*-
+#-*-mode: CPerl; tab-width: 4 -*-
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -50,19 +50,19 @@ print "Sorting...\n";
 my $list = $forms->{'window_comic_page'}{'list1'};
 $list->set_selection_mode( 'single' );
 my @unified_comic_array;
+my %name_lookup;
 foreach my $name (@names) {
 	my ($f, $d) = @{$names{$name}};
-	my $tmpref = [ "$name","$f", "$d" ];
+	my $tmpref = [ "$name", "$d" ];
+	$name_lookup{$name} = "$f";
 	push(@unified_comic_array, $tmpref);
 }
 
-#my @unified_comics_array = ( [ "Milk" => "2" ],
-#							 [ "Stuff" => "3" ] );
 my $i;
 for ($i = 0; $i < $#unified_comic_array; $i++) {
 	$list->append( @{$unified_comic_array[ $i ]} );
 }
-	
+
 
 # Set up status bar.
 my $info = $forms->{'window_comic_page'}{'appbar1'};
@@ -85,29 +85,25 @@ $forms->{'window_comic_page'}{'window_comic_page'}->show();
 # Enter main Gtk loop.
 main Gtk;
 
-#---------------------------------------------------------------------
-# Show the about box.
-#---------------------------------------------------------------------
 sub about_Form {
     my $name = $0;
-    #
-    # Create a Gnome::About '$ab'
-    my $ab = new Gnome::About(
-        "Comic Page", 
-        "0.01", 
-        "(C) GNU GPL, Elliot Glaysher, Mon Jan 22, 2001", 
-        "Elliot Glaysher <nuriko.chan\@home.com> \n" .
-		"Ben Hochstedler <hochstrb\@cs.rose-hulman.edu>", 
-		"Comic Page is a program that will create a composite image of your favorite online comics. It will also do archiving of these comics if you so wish it to."
-    );
-    $ab->set_title(("About")." gtkcomics" );
-    $ab->position('mouse' );
-    $ab->set_policy(1, 1, 0 );
-    $ab->set_modal(1 );
-    $ab->show;
+	#
+	# Create a Gnome::About '$ab'
+    my $ab = new Gnome::About
+	  (
+	   "Comic Page", 
+	   "0.01", 
+	   "(C) GNU GPL, Elliot Glaysher, Mon Jan 22, 2001", 
+	   "Elliot Glaysher <nuriko.chan\@home.com> \n" .
+	   "Ben Hochstedler <hochstrb\@cs.rose-hulman.edu>", 
+	   "Comic Page is a program that will create a composite image of your favorite online comics. It will also do archiving of these comics if you so wish it to."
+	  );
+	$ab->set_title(("About")." gtkcomics" );
+	$ab->position('mouse' );
+	$ab->set_policy(1, 1, 0 );
+	$ab->set_modal(1 );
+	$ab->show;
 }
-# End of &about_Form().
-#---------------------------------------------------------------------
 
 sub comic_selected_from_list {
 	my ( $clist, $row, $column, $event, @data ) = @_;
@@ -116,45 +112,29 @@ sub comic_selected_from_list {
 	my $proc;
 	# Get the proc name of the comic.
 	$name = $clist->get_text( $row, 0 );
-	$proc = $clist->get_text( $row, 1 );
-
-    # Just prints some information about the selected row
+	$proc = $name_lookup{$name};
+	# Just prints some information about the selected row
 	print "Okay! You want to view \"$name\" with the proc of \"$proc\".\n";
 
-    return;
-
+	return;
 }
 
-#---------------------------------------------------------------------
-# This sub displays the requested comic based on the input of the
-# $forms->{'window_comic_page'}{'calendar_date_comic_selection'}->
-# get_date.
-#---------------------------------------------------------------------
 sub Display_comic {
-
-	# Create a reference to the calendar in $calendar, and reference
-	# it.
-    #my $calendar;
-    #$calendar = $forms->{'window_comic_page'}{'calendar_date_comic_selection'};
-    #(my $year, my $month, my $day) = $calendar->get_date();
-    #print "$year:$month:$day\n";
+  my $calendar;
+    $calendar = $forms->{'window_comic_page'}{'calendar_date_comic_selection'};
+    (my $year, my $month, my $day) = $calendar->get_date();
+    print "$year:$month:$day\n";
 
     #$forms->{'window_comic_page'}{'pixmap1'}->load_file($filename);
     #$forms->{'window_comic_page'}{'pixmap1'}->show();
 	#$info->set_status("Displaying $filename");
 }
-# End of &on_calendar1_day_selected().
-#---------------------------------------------------------------------
 
-#---------------------------------------------------------------------
-# This is the actual sub that does the destroying. Good bye!
-#---------------------------------------------------------------------
 sub shut_me_down {
 	Gtk->exit( 0 );
 	return $false;
 }
-# End of all the actual destruction sub.
-#---------------------------------------------------------------------
+
 
 
 
